--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 dist: xenial
 language: python
 python:
-  - "3.7"
+  - 3.7
 
 install:
   - pip install nbfancy 
 
 script:
-  - nbfancy configure -y jupyter_css 
+  - nbfancy configure -y all_magic 
   - nbfancy rerun --allow_errors
   - nbfancy render
   - nbfancy html
